<?xml version="1.0"?>
<package format="3">
  <name>rqt_top</name>
  <version>0.4.9</version>
  <description>RQT plugin for monitoring ROS processes.</description>

  <author email="dan@lazewatsky.com">Dan Lazewatsky</author>
  <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_top</url>
  <url type="repository">https://github.com/ros-visualization/rqt_top</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_top/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
